--- a/AERO_422_HW1.tex
+++ b/AERO_422_HW1.tex
@@ -1,20 +1,14 @@
-\documentclass[]{book}
+\documentclass[]{article}
 
-%These tell TeX which packages to use.
-\usepackage{array,epsfig}
+% Import packages
 \usepackage{amsmath}
-\usepackage{amsfonts}
-\usepackage{amssymb}
-\usepackage{amsxtra}
-\usepackage{amsthm}
-\usepackage{mathrsfs}
 \usepackage{pgfplots}
 \usepackage{tikz}
-\usetikzlibrary{calc,math}
 
+\usetikzlibrary{calc,math}
 \pgfplotsset{compat=1.8}
 
-%Pagination stuff.
+% Page initialization
 \setlength{\topmargin}{-.3 in}
 \setlength{\oddsidemargin}{0in}
 \setlength{\evensidemargin}{0in}
@@ -22,81 +16,83 @@
 \setlength{\textwidth}{6.5in}
 \pagestyle{empty}
 
-
+%==============================================================%
+%------------------------START-DOCUMENT------------------------%
+%==============================================================%
 \begin{document}
 
+%----------------------------HEADER----------------------------%
 
 \begin{center}
-{\Large AERO 422 Homework \#1}\\
-\vspace{0.2 cm}
-Instructor: Vedang Deshpande\\ %You should put your name here
-\vspace{0.2 cm}
-Due: September 15, 2021 at 12:40p.m.\\
-\vspace{0.2 cm}
-Fall 2021\\
-\vspace{0.2 cm}
-(\textbf{20 Points})\\
-% \vspace{0.2 cm}
-% Due: DATE????? %You should write the date here.
+    {\Large AERO 422 Homework \#1}\\ % Homework number
+    \vspace{0.2 cm}
+    Instructor: Vedang Deshpande\\ % Instructor name
+    \vspace{0.2 cm}
+    Due: September 15, 2021 at 12:40p.m.\\ % Due date
+    \vspace{0.2 cm}
+    Fall 2021\\ % semester
+    \vspace{0.2 cm}
+    (\textbf{20 Points})\\
 \end{center}
 
 \vspace{0.2 cm}
 
-
-% \subsection*{Exercises for Section 1.1: Norm and Inner Product}
-
 \begin{enumerate}
 
-\item (\textbf{5 points}) For the following rational function, i) determine the poles and zeros, ii) plot the pole-zero map using MATLAB (or another appropriate alternative), and iii) find the magnitude and phase at $s=-1+j$.
-$$F(s)=\frac{6(s^2+2)}{s(s^2+2s+5)}$$
-\vspace{0.2 cm}
+    %---------------------------PROBLEM-1--------------------------%
+    \item (\textbf{5 points}) For the following rational function, i) determine the poles and zeros, ii) plot the pole-zero map using MATLAB (or another appropriate alternative), and iii) find the magnitude and phase at $s=-1+j$.
+    $$F(s)=\frac{6(s^2+2)}{s(s^2+2s+5)}$$
+    \vspace{0.2 cm}
 
-\item
-\begin{enumerate}
-    \item (\textbf{2 points)} Using the \textit{definition} of the Laplace transform, find $F(s)=\mathcal{L}\{f(t)\}$ for $f(t)=e^{-at}\cdot1(t)$.
-    \item (\textbf{3 points}) Using the Laplace table and its properties, find the Laplace transform of $f(t)$ shown in the figure.
-    \begin{center}
-    \begin{tikzpicture}
-        % Axis
-        \begin{axis}[
+    %---------------------------PROBLEM-2--------------------------%
+    \item
+    \begin{enumerate}
+        \item (\textbf{2 points)} Using the \textit{definition} of the Laplace transform, find $F(s)=\mathcal{L}\{f(t)\}$ for $f(t)=e^{-at}\cdot1(t)$.
+        \item (\textbf{3 points}) Using the Laplace table and its properties, find the Laplace transform of $f(t)$ shown in the figure.
+        \begin{center}
+        \begin{tikzpicture}
             % Axis
-            axis x line = middle,
-            axis y line = middle,
-            ylabel = $f(t)$,
-            xlabel = $t$,
-            xtick = {0,1},
-            ytick = {0,1},
-            xmax = 3,
-            ymax = 2,
-            xmin = -1,
-            ymin = -0.25
-            ]
-            % Plots
-            \addplot[thick,domain= -1:0] {0};
-            \addplot[thick,domain=  0:1] {x};
-            \addplot[thick,domain=  1:3] {1};
-            \draw[thick,dashed] (axis cs:1,1) -- (axis cs:1, 0);
-            \draw[thick,dashed] (axis cs:1,1) -- (axis cs:0, 1);
-        \end{axis}
-    \end{tikzpicture}
-    \end{center}
-    \textit{Hint: Express $f(t)$ in terms of simple components like ramp the function and unit step function.}
-\end{enumerate}
-\vspace{0.4 cm}
+            \begin{axis}[
+                % Axis
+                axis x line = middle,
+                axis y line = middle,
+                ylabel = $f(t)$,
+                xlabel = $t$,
+                xtick = {0,1},
+                ytick = {0,1},
+                xmax = 3,
+                ymax = 2,
+                xmin = -1,
+                ymin = -0.25
+                ]
+                % Plots
+                \addplot[thick,domain= -1:0] {0};
+                \addplot[thick,domain=  0:1] {x};
+                \addplot[thick,domain=  1:3] {1};
+                \draw[thick,dashed] (axis cs:1,1) -- (axis cs:1, 0);
+                \draw[thick,dashed] (axis cs:1,1) -- (axis cs:0, 1);
+            \end{axis}
+        \end{tikzpicture}
+        \end{center}
+        \textit{Hint: Express $f(t)$ in terms of simple components like ramp the function and unit step function.}
+    \end{enumerate}
+    \vspace{0.4 cm}
 
-\item (\textbf{6 points}) For each of the following differential equations with specified initial conditions, use the properties of the Laplace transform to solve for $X(s)$, where $X(s)=\mathcal{L}\{x(t)\}$.
-\begin{enumerate}
-    \item $\Ddot{x}(t)+2\Dot{x}(t)+5x(t)=3\cdot1(t),\hspace{0.2cm} x(0^+)=0,\hspace{0.1cm} \Dot{x}(0^+)=0$
-    \item $\Ddot{x}(t)+2\zeta\omega_n\Dot{x}(t)+\omega_n^2x(t)=0,\hspace{0.2cm} x(0^+)=a,\hspace{0.1cm} \Dot{x}(0^+)=b$
-    \item $\Dot{x}(t)+ax(t)=A\sin{\omega t},\hspace{0.2cm} x(0^+)=b$
-\end{enumerate}
-\vspace{0.4 cm}
+    %---------------------------PROBLEM-3--------------------------%
+    \item (\textbf{6 points}) For each of the following differential equations with specified initial conditions, use the properties of the Laplace transform to solve for $X(s)$, where $X(s)=\mathcal{L}\{x(t)\}$.
+    \begin{enumerate}
+        \item $\Ddot{x}(t)+2\Dot{x}(t)+5x(t)=3\cdot1(t),\hspace{0.2cm} x(0^+)=0,\hspace{0.1cm} \Dot{x}(0^+)=0$
+        \item $\Ddot{x}(t)+2\zeta\omega_n\Dot{x}(t)+\omega_n^2x(t)=0,\hspace{0.2cm} x(0^+)=a,\hspace{0.1cm} \Dot{x}(0^+)=b$
+        \item $\Dot{x}(t)+ax(t)=A\sin{\omega t},\hspace{0.2cm} x(0^+)=b$
+    \end{enumerate}
+    \vspace{0.4 cm}
 
-\item (\textbf{4 points}) Assuming that $\{f(t),F(s)\}$ are a Laplace transform pair, where
-$$F(s)=\frac{3s+1}{s^2+s+1},$$
-determine the values of $f(0^+)$, $\Dot{f}(0^+)$, and $f(\infty)$.\vspace{0.2 cm}\\
-\textit{Hint: Apply the initial value theorem approach to} $\Ddot{f}(t)$.
-\vspace{0.4 cm}
+    %---------------------------PROBLEM-4--------------------------%
+    \item (\textbf{4 points}) Assuming that $\{f(t),F(s)\}$ are a Laplace transform pair, where
+    $$F(s)=\frac{3s+1}{s^2+s+1},$$
+    determine the values of $f(0^+)$, $\Dot{f}(0^+)$, and $f(\infty)$.\vspace{0.2 cm}\\
+    \textit{Hint: Apply the initial value theorem approach to} $\Ddot{f}(t)$.
+    \vspace{0.4 cm}
 
 \end{enumerate}
 
