move parenthesis outside bold function

--- a/AERO 422/AERO_422_HW1.tex
+++ b/AERO 422/AERO_422_HW1.tex
@@ -47,7 +47,7 @@
     %---------------------------PROBLEM-2--------------------------%
     \item
     \begin{enumerate}
-        \item (\textbf{2 points)} Using the \textit{definition} of the Laplace transform, find $F(s)=\mathcal{L}\{f(t)\}$ for $f(t)=e^{-at}\cdot1(t)$.
+        \item (\textbf{2 points}) Using the \textit{definition} of the Laplace transform, find $F(s)=\mathcal{L}\{f(t)\}$ for $f(t)=e^{-at}\cdot1(t)$.
         \item (\textbf{3 points}) Using the Laplace table and its properties, find the Laplace transform of $f(t)$ shown in the figure.
         \begin{center}
         \begin{tikzpicture}
