--- a/AERO 422/AERO_422_HW2.tex
+++ b/AERO 422/AERO_422_HW2.tex
@@ -1,12 +1,12 @@
 \documentclass[]{article}
 
 % Import packages
-\usepackage{amsmath}
-\usepackage{pgfplots}
+\usepackage{mathtools}
+\usepackage{graphicx}
+\usepackage{wrapfig}
 \usepackage{tikz}
 
-\usetikzlibrary{calc,math}
-\pgfplotsset{compat=1.8}
+\usetikzlibrary{shapes,arrows}
 
 % Page initialization
 \setlength{\topmargin}{-.3 in}
@@ -24,15 +24,15 @@
 %----------------------------HEADER----------------------------%
 
 \begin{center}
-    {\Large AERO 422 Homework \#1}\\ % Homework number
+    {\Large AERO 422 Homework \#2}\\ % Homework number
     \vspace{0.2 cm}
     Instructor: Vedang Deshpande\\ % Instructor name
     \vspace{0.2 cm}
-    Due: September 15, 2021 at 12:40p.m.\\ % Due date
+    Due: [TBD] at 12:40p.m.\\ % Due date
     \vspace{0.2 cm}
     Fall 2021\\ % semester
     \vspace{0.2 cm}
-    (\textbf{20 Points})\\
+    (\textbf{TBC Points})\\
 \end{center}
 
 \vspace{0.2 cm}
@@ -40,61 +40,89 @@
 \begin{enumerate}
 
     %---------------------------PROBLEM-1--------------------------%
-    \item (\textbf{5 points}) For the following rational function, i) determine the poles and zeros, ii) plot the pole-zero map using MATLAB (or another appropriate alternative), and iii) find the magnitude and phase at $s=-1+j$.
-    $$F(s)=\frac{6(s^2+2)}{s(s^2+2s+5)}$$
-    \vspace{0.2 cm}
+    \item Consider the function $f(t)=te^{2t}\sin{3t}$
+    \begin{enumerate}
+        \item (\textbf{2 points}) Find the Laplace transform using the table. Mention which entries from the table are being used.
+        \item (\textbf{1 point}) Can we use the F.V.T. to determine $f(\infty)$? Why or why not?
+    \end{enumerate}
+    \vspace{0.4 cm}
+
 
     %---------------------------PROBLEM-2--------------------------%
-    \item
+    \item Find the inverse Laplace transform using the table and partial fraction expansion. Show your work.
     \begin{enumerate}
-        \item (\textbf{2 points)} Using the \textit{definition} of the Laplace transform, find $F(s)=\mathcal{L}\{f(t)\}$ for $f(t)=e^{-at}\cdot1(t)$.
-        \item (\textbf{3 points}) Using the Laplace table and its properties, find the Laplace transform of $f(t)$ shown in the figure.
-        \begin{center}
-        \begin{tikzpicture}
-            % Axis
-            \begin{axis}[
-                % Axis
-                axis x line = middle,
-                axis y line = middle,
-                ylabel = $f(t)$,
-                xlabel = $t$,
-                xtick = {0,1},
-                ytick = {0,1},
-                xmax = 3,
-                ymax = 2,
-                xmin = -1,
-                ymin = -0.25
-                ]
-                % Plots
-                \addplot[thick,domain= -1:0] {0};
-                \addplot[thick,domain=  0:1] {x};
-                \addplot[thick,domain=  1:3] {1};
-                \draw[thick,dashed] (axis cs:1,1) -- (axis cs:1, 0);
-                \draw[thick,dashed] (axis cs:1,1) -- (axis cs:0, 1);
-            \end{axis}
-        \end{tikzpicture}
-        \end{center}
-        \textit{Hint: Express $f(t)$ in terms of simple components like ramp the function and unit step function.}
+        \item (\textbf{2 points}) $$F(s)=\frac{s+10}{s^2+2s+10}$$
+        \item (\textbf{3 points}) $$F(s)=\frac{s^2+1}{s(s-1)^3}$$
     \end{enumerate}
     \vspace{0.4 cm}
 
     %---------------------------PROBLEM-3--------------------------%
-    \item (\textbf{6 points}) For each of the following differential equations with specified initial conditions, use the properties of the Laplace transform to solve for $X(s)$, where $X(s)=\mathcal{L}\{x(t)\}$.
+    \item A given system is found to have a transfer function that is
+    $$\frac{Y(s)}{R(s)}=\frac{10(s+2)}{s^2+8s+15}$$
     \begin{enumerate}
-        \item $\Ddot{x}(t)+2\Dot{x}(t)+5x(t)=3\cdot1(t),\hspace{0.2cm} x(0^+)=0,\hspace{0.1cm} \Dot{x}(0^+)=0$
-        \item $\Ddot{x}(t)+2\zeta\omega_n\Dot{x}(t)+\omega_n^2x(t)=0,\hspace{0.2cm} x(0^+)=a,\hspace{0.1cm} \Dot{x}(0^+)=b$
-        \item $\Dot{x}(t)+ax(t)=A\sin{\omega t},\hspace{0.2cm} x(0^+)=b$
+        \item (\textbf{3 points}) Determine, by hand, $y(t)$ when $r(t)$ is a unit step input. Show your work.
+        \item (\textbf{2 points}) Can we use F.V.T. to find $y(\infty)$? If the answer is yes, apply F.V.T. If not, explain why.
     \end{enumerate}
     \vspace{0.4 cm}
 
     %---------------------------PROBLEM-4--------------------------%
-    \item (\textbf{4 points}) Assuming that $\{f(t),F(s)\}$ are a Laplace transform pair, where
-    $$F(s)=\frac{3s+1}{s^2+s+1},$$
-    determine the values of $f(0^+)$, $\Dot{f}(0^+)$, and $f(\infty)$.\vspace{0.2 cm}\\
-    \textit{Hint: Apply the initial value theorem approach to} $\Ddot{f}(t)$.
+    \item    
+    \begin{enumerate}
+        \item (\textbf{3 points}) Using the convolution integral, find the step response of the system whose impulse response is given below
+        \[
+            T(n)=
+            \begin{cases}
+                te^{-t} & t \geq 0\\
+                0       & t < 0
+            \end{cases}
+        \]
+        \item (\textbf{2 points}) Now use the Laplace transform table and partial fraction expansion to find $y(t)$.
+        \item (\textbf{2 points}) Apply I.V.T. and F.V.T. (if applicable) to find $y(0)$ and $y(\infty)$.
+    \end{enumerate}
     \vspace{0.4 cm}
 
+    \item For each of the following block diagrams, reduce the block diagram to find $T(s)$, where $T(s)$ is defined by $Y(s)=T(s)R(s)$.
+    \begin{enumerate}
+        \item 
+    \end{enumerate}
+
 \end{enumerate}
+
+\begin{figure}
+    \includegraphics[scale=0.25]{HW2_image.PNG} % width=\linewidth
+    \label{fig:convolution}
+\end{figure}
+
+
+
+\tikzstyle{block} = [draw, fill=blue!20, rectangle, 
+    minimum height=2.5em, minimum width=4em]
+\tikzstyle{sum} = [draw, fill=blue!20, circle, node distance=1cm]
+\tikzstyle{input} = [coordinate]
+\tikzstyle{output} = [coordinate]
+
+% The block diagram code is probably more verbose than necessary
+\begin{tikzpicture}[auto, node distance=2cm,>=latex']
+    % We start by placing the blocks
+    \node [input, name=input] {};
+    \node [sum, right of=input] (sum) {};
+    \node [block, right of=sum] (G) {$G(s)$};
+    % \node [block, above of=G, node distance=3cm] (H1) {$H_1(s)$}
+    \node [block, right of=G, node distance=3cm] (H2) {$H_2(s)$};
+    % We draw an edge between G and H2 block to 
+    % calculate the coordinate u. We need it to place the measurement block. 
+    \draw [->] (G) -- node[name=u] {$u$} (H2);
+    \node [output, right of=H2] (output) {};
+    \node [block, below of=u] (measurements) {Measurements};
+
+    % Once the nodes are placed, connecting them is easy. 
+    \draw [draw,->] (input) -- node {$r$} (sum);
+    \draw [->] (sum) -- node {$e$} (G);
+    \draw [->] (H2) -- node [name=y] {$y$}(output);
+    \draw [->] (y) |- (measurements);
+    \draw [->] (measurements) -| node[pos=0.99] {$-$} 
+        node [near end] {$y_m$} (sum);
+\end{tikzpicture}
 
 \end{document}
 
