--- a/AERO 422/AERO_422_HW2.tex
+++ b/AERO 422/AERO_422_HW2.tex
@@ -179,7 +179,7 @@
 
 % insert image
 \begin{figure}[h]
-    \includegraphics[scale=0.53,center]{AERO_422_HW2_image.PNG} % width=\linewidth
+    \includegraphics[scale=0.53,center]{AERO_422_HW2_image.PNG}
     \caption{Convolution integral (reference for problem 4)}
 \end{figure}
 
