--- a/AERO 422/AERO_422_HW2_solutions_part2.tex
+++ b/AERO 422/AERO_422_HW2_solutions_part2.tex
@@ -45,8 +45,8 @@
     \item Consider the function $f(t)=te^{2t}\sin{3t}$
     \begin{enumerate}
         \item (\textbf{2 points}) Find the Laplace transform using the table. Mention which entries from the table are being used.\\
-        \textcolor{red}{
-        Use the following properties from the Laplace table
+        \textcolor{blue}{
+        Refer to the following properties from the Laplace table
         \begin{flalign*}
             \mathcal{L}\left\{t^n f(t)\right\} = (-1)^n \frac{d^n F(s)}{ds^n} \quad (7), \qquad
             \mathcal{L}\left\{e^{at} \sin{kt}\right\} = \frac{k}{(s-a)^2 + k^2} \quad (22)
@@ -65,7 +65,13 @@
         \end{flalign*}
         }
 
-        \item (\textbf{1 point}) Can we use the F.V.T. to determine $f(\infty)$? Why or why not?
+        \item (\textbf{1 point}) Can we use the F.V.T. to determine $f(\infty)$? Why or why not?\\
+        \textcolor{blue}{
+        For the Final Value Theroem to apply, $f(t)$ must approach a finite value in the limit as $t$ approaches $\infty$. Upon inspection, we see that $f(t)=te^{2t}\sin{3t}$ diverges as $t \rightarrow \infty$, and thus does not approach a finite value.\\\\
+        Another way to arrive at this conclusion is to look at the poles of the function. If a pole exists in the right-half plane, then the function will diverge. If the poles are puely imaginary, then the function will oscillate and will not approach a finite value in the limit as $t \rightarrow \infty$. Therefore, if there are no poles in the right-half plane, then at least one pole must lie in the left-half plane in order for the function to converge to a steady-state finite value.\\\\
+        The poles of the transfer function $$F(s)=\frac{6s-12}{((s-2)^2+9)^2}$$ are $s=2+j3$, $2-j3$, $2+j3$, $2-j3$, which are all in the right-half plane, implying that this function is unstable.\\\\
+        Therefore, the Final Value Theorem cannot be applied to determine $f(\infty)$.
+        }
     \end{enumerate}
     \vspace{0.4 cm}
 
@@ -74,6 +80,28 @@
     \item Find the inverse Laplace transform using the table and partial fraction expansion. Show your work.
     \begin{enumerate}
         \item (\textbf{2 points}) $$F(s)=\frac{s+10}{s^2+2s+10}$$
+        \textcolor{blue}{
+            Refer to the following properties from the Laplace table
+        \begin{flalign*}
+            \mathcal{L}\left\{e^{at} \sin{kt}\right\} = \frac{k}{(s-a)^2 + k^2} \quad (22), \qquad
+            \mathcal{L}\left\{e^{at} \cos{kt}\right\} = \frac{s-a}{(s-a)^2 + k^2} \quad (23)
+        \end{flalign*}
+        By completing the square, $F(s)$ can be re-written as follows:
+        \begin{flalign*}
+            F(s) &= \frac{s+10}{s^2+2s+10}\\
+            &= \frac{s+10}{(s+1)^2+9}\\
+            &= \frac{s+1}{(s+1)^2+3^2} + \frac{9}{(s+1)^2+3^2}\\
+            &= \frac{s+1}{(s+1)^2+3^2} + \frac{3^2}{(s+1)^2+3^2}
+        \end{flalign*}
+        Take the inverse Laplace transform of $F(s)$ by using $(22)$ and $(23)$.
+        \begin{flalign*}
+            f(t) &= \mathcal{L}^{-1} \left\{F(s)\right\}\\
+            &= \mathcal{L}^{-1} \left\{\frac{s+1}{(s+1)^2+3^2}\right\} + 3 \cdot \left\{\frac{3}{(s+1)^2+3^2}\right\}\\
+            &= e^{-t} \cos{3t} + 3e^{-t} \sin{3t}\\
+            &= e^{-t} \left(\cos{3t} + 3 \sin{3t}\right)
+        \end{flalign*}
+        }
+
         \item (\textbf{3 points}) $$F(s)=\frac{s^2+1}{s(s-1)^3}$$
     \end{enumerate}
     \vspace{0.4 cm}
