--- a/AERO 422/AERO_422_HW2_solutions_part2.tex
+++ b/AERO 422/AERO_422_HW2_solutions_part2.tex
@@ -103,6 +103,42 @@
         }
 
         \item (\textbf{3 points}) $$F(s)=\frac{s^2+1}{s(s-1)^3}$$
+        \textcolor{blue}{
+        Refer to the following properties from the Laplace table
+        \begin{flalign*}
+            \mathcal{L}\left\{\frac{1}{s}\right\} = 1(t) \quad (1), \qquad
+            \mathcal{L}\left\{\frac{1}{s-a}\right\} = e^{at} \quad (15), \qquad
+            \mathcal{L}\left\{t^ne^{at}\right\} = \frac{n!}{(s-a)^{n+1}} \quad (21)
+        \end{flalign*}
+        \begin{flalign*}
+            F(s) = \frac{s^2+1}{s(s-1)^3} \quad \rightarrow \quad \text{Poles at } s_1=0 \text{ and } s_2=1 \text{ (with multiplicity 3)}
+        \end{flalign*}
+        The partial fraction expansion takes the form
+        \begin{flalign*}
+            F(s) = \frac{A}{s} + \frac{B}{s-1} + \frac{C}{(s-1)^2} + \frac{D}{(s-1^3)}
+        \end{flalign*}
+        Reduce this form of $F(s)$ into a single rational function to get
+        \begin{flalign*}
+            F(s) = \frac{(A+B+C)s^3 + (-3A-2B-C)s^2 + (3A+B+D)s - A}{s(s-1)^3}
+        \end{flalign*}
+        Comparing this form of $F(s)$ to the original form yields a set of 4 equations with 4 unknowns as
+        \begin{flalign*}
+            A+B+C &= 0\\
+            -3A-2B-C &= 1\\
+            3A+B+D &= 0\\
+            -A &= 1
+        \end{flalign*}
+        The solution to these equations is $A=-1$, $B=1$, $C=0$, and $D=2$. Then the partial fraction expansion of $F(s)$ is
+        \begin{flalign*}
+            F(s) = - \frac{1}{s} + \frac{1}{s-1} + \frac{2}{(s-1)^3}
+        \end{flalign*}
+        Apply $(1)$, $(15)$, $(21)$ to find $f(t)$.
+        \begin{flalign*}
+            f(t) &= \mathcal{L}^{-1} \left\{F(s)\right\}\\
+            &= - \mathcal{L}^{-1} \left\{\frac{1}{s}\right\} + \mathcal{L}^{-1} \left\{\frac{1}{s-1}\right\} + \mathcal{L}^{-1} \left\{\frac{2}{(s-1)^3}\right\}\\
+            &= -1(t) + e^t + t^2e^t, \quad t \geq 0
+        \end{flalign*}
+        }
     \end{enumerate}
     \vspace{0.4 cm}
 
@@ -110,8 +146,10 @@
     \item A given system is found to have a transfer function that is
     $$\frac{Y(s)}{R(s)}=\frac{10(s+2)}{s^2+8s+15}$$
     \begin{enumerate}
-        \item (\textbf{3 points}) Using partial fractions, determine $y(t)$ when $r(t)$ is a unit step input. Show your work.
-        \item (\textbf{1 point}) Can we use F.V.T. to find $y(\infty)$? If the answer is yes, apply F.V.T. If not, explain why.
+        \item (\textbf{3 points}) Using partial fractions, determine $y(t)$ when $r(t)$ is a unit step input. Show your work.\\
+        \textcolor{blue}{Solution in other document (Problem 3b)}
+        \item (\textbf{1 point}) Can we use F.V.T. to find $y(\infty)$? If the answer is yes, apply F.V.T. If not, explain why.\\
+        \textcolor{blue}{Solution in other document (Problem 3a)}
     \end{enumerate}
     \vspace{0.4 cm}
 
