Corrected a mistake in problem 2

--- a/AERO 422/AERO_422_HW2_solutions_part2.tex
+++ b/AERO 422/AERO_422_HW2_solutions_part2.tex
@@ -68,7 +68,7 @@
         \item (\textbf{1 point}) Can we use the F.V.T. to determine $f(\infty)$? Why or why not?\\
         \textcolor{blue}{
         For the Final Value Theroem to apply, $f(t)$ must approach a finite value in the limit as $t$ approaches $\infty$. Upon inspection, we see that $f(t)=te^{2t}\sin{3t}$ diverges as $t \rightarrow \infty$, and thus does not approach a finite value.\\\\
-        Another way to arrive at this conclusion is to look at the poles of the function. If a pole exists in the right-half plane, then the function will diverge. If the poles are purely imaginary, then the function will oscillate and will not approach a finite value in the limit as $t \rightarrow \infty$. Therefore, if there are no poles in the right-half plane, then at least one pole must lie in the left-half plane in order for the function to converge to a steady-state finite value.\\\\
+        Another way to arrive at this conclusion is to look at the poles of the function. If a pole exists in the right-half plane, then the function will diverge. If the poles are purely imaginary, then the function will oscillate and will not approach a finite value in the limit as $t \rightarrow \infty$. Therefore, all of the poles must lie in the left-half plane in order for the function to converge to a steady-state finite value.\\\\
         The poles of the transfer function $$F(s)=\frac{6s-12}{((s-2)^2+9)^2}$$ are $s=2+j3$, $2-j3$, $2+j3$, $2-j3$, which are all in the right-half plane, implying that this function is unstable.\\\\
         Therefore, the Final Value Theorem cannot be applied to determine $f(\infty)$.
         }
