Added Problem 1 part d

--- a/AERO 422/AERO_422_HW3_solutions_part2.tex
+++ b/AERO 422/AERO_422_HW3_solutions_part2.tex
@@ -70,6 +70,19 @@
         \textcolor{blue}{
         Solution in other document.
         }
+
+        \item (\textbf{12 points}) Consider three cases of parameter values:\\\\
+        Case 1: $K = 30$, $m = 2$, $c = 7$, $\tau = 0.2$\\
+        Case 2: $K = 5$, $m = 2$, $c = 7$, $\tau = 12$\\
+        Case 3: $K = 10$, $m = 2$, $c = 7$, $\tau = 0.1$\\\\
+        For all cases,\\\\
+        i.) Plot $y(t)$ if $r(t) = 1(t), t \geq 0$. You may use the "step" command in MATLAB.\\\\
+        ii.) Plot the pole-zero map of $T(s)$ using MATLAB.\\\\
+        iii.) For each case, determine whether or not the system is stable.\\\\
+        iv.) For each case, determine whether or not this parameter set is acceptable for the problem application we have considered.
+        \textcolor{blue}{
+        }
+        
     \end{enumerate}
 
 \end{enumerate}
